// Vitest Snapshot v1

exports[`Page Process > pageMap en-US 1`] = `
[
  [
    {
      "kind": "MdxPage",
      "name": "404",
      "route": "/404",
    },
    {
      "kind": "MdxPage",
      "name": "500",
      "route": "/500",
    },
    {
      "data": {
        "404": {
          "theme": {
            "timestamp": false,
            "typesetting": "article",
          },
          "type": "page",
        },
        "500": {
          "theme": {
            "timestamp": false,
            "typesetting": "article",
          },
          "type": "page",
        },
        "about": {
          "items": {
            "a-page": {
              "title": "A Page",
            },
            "acknowledgement": {
              "title": "Acknowledgement",
            },
            "contributors": {
              "href": "https://github.com/vercel/swr/graphs/contributors",
              "newWindow": true,
              "title": "Contributors",
            },
            "team": {
              "title": "Team",
            },
          },
          "title": "About",
          "type": "menu",
        },
        "blog": {
          "theme": {
            "breadcrumb": false,
            "footer": true,
            "sidebar": false,
            "toc": true,
            "typesetting": "article",
          },
          "title": "Blog",
          "type": "page",
        },
        "docs": {
          "theme": {
            "toc": true,
          },
          "title": "Docs",
          "type": "page",
        },
        "examples": {
          "theme": {
            "layout": "full",
          },
          "title": "Examples",
          "type": "page",
        },
        "index": {
          "display": "hidden",
          "title": "Introduction",
          "type": "page",
        },
        "nextra_link": {
          "href": "https://github.com/shuding/nextra",
          "newWindow": true,
          "title": "Nextra ↗",
          "type": "page",
        },
      },
      "kind": "Meta",
      "locale": "en-US",
    },
    {
      "children": [
        {
          "data": {
            "a-page": {
              "display": "hidden",
              "theme": {
                "layout": "raw",
              },
              "title": "A Page",
              "type": "page",
            },
            "acknowledgement": "🧩 Acknowledgement",
            "team": "👥 Team",
          },
          "kind": "Meta",
          "locale": "en-US",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "a-page",
          "route": "/about/a-page",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "acknowledgement",
          "route": "/about/acknowledgement",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "team",
          "route": "/about/team",
        },
      ],
      "kind": "Folder",
      "name": "about",
      "route": "/about",
    },
    {
      "children": [
        {
          "data": {
            "swr-v1": {
              "theme": {
                "breadcrumb": true,
              },
              "title": "Announcing SWR 1.0",
            },
          },
          "kind": "Meta",
          "locale": "en-US",
        },
        {
          "frontMatter": {
            "description": "Almost 2 years ago we open sourced SWR, the tiny data-fetching React library that people love. Today we are reaching another milestone: the 1.0 version of SWR.",
            "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
          },
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "swr-v1",
          "route": "/blog/swr-v1",
        },
      ],
      "kind": "Folder",
      "name": "blog",
      "route": "/blog",
    },
    {
      "frontMatter": {
        "searchable": false,
      },
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "blog",
      "route": "/blog",
    },
    {
      "children": [
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "404-500",
          "route": "/docs/404-500",
        },
        {
          "data": {
            "--- hey": {
              "title": "Getting Started",
              "type": "separator",
            },
            "--- my_new_separator": {
              "title": "Advanced",
              "type": "separator",
            },
            "404-500": "404/500 Custom Error Pages",
            "advanced": {
              "title": "Advanced",
            },
            "arguments": "Arguments",
            "callout": "Callout",
            "change-log": {
              "theme": {
                "sidebar": false,
              },
              "title": "Change Log",
            },
            "code-block-without-language": "Code Block without Language",
            "conditional-fetching": "Conditional Data Fetching",
            "data-fetching": "Data Fetching",
            "error-handling": {
              "display": "hidden",
              "title": "Error Handling",
            },
            "getting-started": "Getting Started",
            "github_link": {
              "href": "https://github.com/shuding/nextra",
              "newWindow": true,
              "title": "GitHub 🐙 →",
              "type": "page",
            },
            "global-configuration": "Global Configuration",
            "middleware": "Middleware",
            "mutation": "Mutation",
            "options": "Options",
            "pagination": "Pagination",
            "prefetching": "Prefetching",
            "raw-layout": {
              "theme": {
                "layout": "raw",
              },
              "title": "Raw Layout",
            },
            "revalidation": "Auto Revalidation",
            "suspense": "Suspense",
            "typescript": "TypeScript :)",
            "with-nextjs": "Next.js SSG and SSR",
            "wrap-toc-items": "Wrap Table of Content Items",
          },
          "kind": "Meta",
          "locale": "en-US",
        },
        {
          "children": [
            {
              "data": {
                "*": {
                  "theme": {
                    "footer": false,
                  },
                },
                "--- yoo": {
                  "title": "Do Not Use",
                  "type": "separator",
                },
                "cache": "Cache",
                "code-highlighting": "Code Highlighting",
                "file-name.with.DOTS": "Filenames with Dots",
                "future-image": "Future Image",
                "markdown-import": "Markdown Import",
                "more": "More: A Super Super Super Super Long Directory",
                "performance": "Performance",
                "react-native": "React Native",
              },
              "kind": "Meta",
              "locale": "en-US",
            },
            {
              "kind": "MdxPage",
              "locale": "en-US",
              "name": "cache",
              "route": "/docs/advanced/cache",
            },
            {
              "kind": "MdxPage",
              "locale": "en-US",
              "name": "code-highlighting",
              "route": "/docs/advanced/code-highlighting",
            },
            {
              "kind": "MdxPage",
              "locale": "en-US",
              "name": "file-name.with.DOTS",
              "route": "/docs/advanced/file-name.with.DOTS",
            },
            {
              "kind": "MdxPage",
              "locale": "en-US",
              "name": "future-image",
              "route": "/docs/advanced/future-image",
            },
            {
              "kind": "MdxPage",
              "locale": "en-US",
              "name": "markdown-import",
              "route": "/docs/advanced/markdown-import",
            },
            {
              "children": [
                {
                  "kind": "MdxPage",
                  "locale": "en-US",
                  "name": "loooooooooooooooooooong-title",
                  "route": "/docs/advanced/more/loooooooooooooooooooong-title",
                },
                {
                  "children": [
                    {
                      "kind": "MdxPage",
                      "name": "one",
                      "route": "/docs/advanced/more/tree/one",
                    },
                    {
                      "kind": "MdxPage",
                      "name": "three",
                      "route": "/docs/advanced/more/tree/three",
                    },
                    {
                      "kind": "MdxPage",
                      "name": "two",
                      "route": "/docs/advanced/more/tree/two",
                    },
                    {
                      "data": {
                        "one": "One",
                        "three": "Three",
                        "two": "Two",
                      },
                      "kind": "Meta",
                    },
                  ],
                  "kind": "Folder",
                  "name": "tree",
                  "route": "/docs/advanced/more/tree",
                },
                {
                  "data": {
                    "loooooooooooooooooooong-title": "Loooooooooooooooooooong Title",
                    "tree": "Tree",
                  },
                  "kind": "Meta",
                  "locale": "en-US",
                },
              ],
              "kind": "Folder",
              "name": "more",
              "route": "/docs/advanced/more",
            },
            {
              "kind": "MdxPage",
              "locale": "en-US",
              "name": "performance",
              "route": "/docs/advanced/performance",
            },
            {
              "kind": "MdxPage",
              "locale": "en-US",
              "name": "react-native",
              "route": "/docs/advanced/react-native",
            },
          ],
          "kind": "Folder",
          "name": "advanced",
          "route": "/docs/advanced",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "advanced",
          "route": "/docs/advanced",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "arguments",
          "route": "/docs/arguments",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "callout",
          "route": "/docs/callout",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "change-log",
          "route": "/docs/change-log",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "code-block-without-language",
          "route": "/docs/code-block-without-language",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "conditional-fetching",
          "route": "/docs/conditional-fetching",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "data-fetching",
          "route": "/docs/data-fetching",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "error-handling",
          "route": "/docs/error-handling",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "getting-started",
          "route": "/docs/getting-started",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "global-configuration",
          "route": "/docs/global-configuration",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "middleware",
          "route": "/docs/middleware",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "mutation",
          "route": "/docs/mutation",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "options",
          "route": "/docs/options",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "pagination",
          "route": "/docs/pagination",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "prefetching",
          "route": "/docs/prefetching",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "raw-layout",
          "route": "/docs/raw-layout",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "revalidation",
          "route": "/docs/revalidation",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "suspense",
          "route": "/docs/suspense",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "typescript",
          "route": "/docs/typescript",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "with-nextjs",
          "route": "/docs/with-nextjs",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "wrap-toc-items",
          "route": "/docs/wrap-toc-items",
        },
      ],
      "kind": "Folder",
      "name": "docs",
      "route": "/docs",
    },
    {
      "children": [
        {
          "data": {
            "auth": "Authentication",
            "basic": "Basic Usage",
            "error-handling": "Error Handling",
            "full": {
              "theme": {
                "layout": "raw",
              },
              "title": "Full",
            },
            "infinite-loading": "Infinite Loading",
            "ssr": "Next.js SSR",
          },
          "kind": "Meta",
          "locale": "en-US",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "Authentication",
          },
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "auth",
          "route": "/examples/auth",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "Basic Usage",
          },
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "basic",
          "route": "/examples/basic",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "Error Handling",
          },
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "error-handling",
          "route": "/examples/error-handling",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "full",
          "route": "/examples/full",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "Infinite Loading",
          },
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "infinite-loading",
          "route": "/examples/infinite-loading",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "Next.js SSR",
          },
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "ssr",
          "route": "/examples/ssr",
        },
      ],
      "kind": "Folder",
      "name": "examples",
      "route": "/examples",
    },
    {
      "frontMatter": {
        "searchable": false,
        "title": "React Hooks for Data Fetching",
      },
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "index",
      "route": "/",
    },
    {
      "data": {
        "404": "404",
        "500": "500",
        "about": "About",
        "blog": "Blog",
        "docs": "Docs",
        "examples": "Examples",
      },
      "kind": "Meta",
    },
  ],
  "/docs/data-fetching",
  "Data Fetching",
]
`;

exports[`Page Process > pageMap zh-CN 1`] = `
[
  [
    {
      "data": {
        "about": "About",
        "blog": {
          "title": "博客",
          "type": "page",
        },
        "docs": {
          "title": "文档",
          "type": "page",
        },
        "examples": {
          "title": "示例",
          "type": "page",
        },
        "index": {
          "display": "hidden",
          "title": "简介",
          "type": "page",
        },
      },
      "kind": "Meta",
      "locale": "zh-CN",
    },
    {
      "children": [
        {
          "data": {
            "a-page": {
              "display": "hidden",
              "theme": {
                "layout": "raw",
              },
              "title": "A Page",
              "type": "page",
            },
            "acknowledgement": "🧩 Acknowledgement",
            "team": "👥 Team",
          },
          "kind": "Meta",
          "locale": "en-US",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "a-page",
          "route": "/about/a-page",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "acknowledgement",
          "route": "/about/acknowledgement",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "team",
          "route": "/about/team",
        },
      ],
      "kind": "Folder",
      "name": "about",
      "route": "/about",
    },
    {
      "children": [
        {
          "data": {
            "swr-v1": "SWR 1.0 发布",
          },
          "kind": "Meta",
          "locale": "zh-CN",
        },
        {
          "frontMatter": {
            "description": "大约两年前，我们开源了 SWR，大家喜爱的小型数据请求 React 库。今天，我们迎来了另一个里程碑：SWR 1.0 版本发布。",
            "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
          },
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "swr-v1",
          "route": "/blog/swr-v1",
        },
      ],
      "kind": "Folder",
      "name": "blog",
      "route": "/blog",
    },
    {
      "children": [
        {
          "data": {
            "advanced": "高级",
            "arguments": "传入参数",
            "change-log": "更新日志",
            "conditional-fetching": "条件数据请求",
            "data-fetching": "数据请求",
            "error-handling": "错误处理",
            "getting-started": "入门",
            "global-configuration": "全局配置",
            "middleware": "中间件",
            "mutation": "数据更改",
            "options": "选项",
            "pagination": "分页",
            "prefetching": "预请求",
            "revalidation": "自动重新请求",
            "suspense": "Suspense",
            "typescript": "Typescript",
            "with-nextjs": "Next.js SSG 和 SSR",
            "wrap-toc-items": "包裝目錄項",
          },
          "kind": "Meta",
          "locale": "zh-CN",
        },
        {
          "children": [
            {
              "data": {
                "cache": "缓存",
                "file-name.with.DOTS": "带点的文件名",
                "more": "More",
                "performance": "性能",
                "react-native": "React Native",
              },
              "kind": "Meta",
              "locale": "zh-CN",
            },
            {
              "kind": "MdxPage",
              "locale": "zh-CN",
              "name": "cache",
              "route": "/docs/advanced/cache",
            },
            {
              "kind": "MdxPage",
              "locale": "zh-CN",
              "name": "file-name.with.DOTS",
              "route": "/docs/advanced/file-name.with.DOTS",
            },
            {
              "children": [
                {
                  "children": [
                    {
                      "kind": "MdxPage",
                      "name": "one",
                      "route": "/docs/advanced/more/tree/one",
                    },
                    {
                      "kind": "MdxPage",
                      "name": "three",
                      "route": "/docs/advanced/more/tree/three",
                    },
                    {
                      "kind": "MdxPage",
                      "name": "two",
                      "route": "/docs/advanced/more/tree/two",
                    },
                    {
                      "data": {
                        "one": "One",
                        "three": "Three",
                        "two": "Two",
                      },
                      "kind": "Meta",
                    },
                  ],
                  "kind": "Folder",
                  "name": "tree",
                  "route": "/docs/advanced/more/tree",
                },
                {
                  "kind": "MdxPage",
                  "locale": "en-US",
                  "name": "loooooooooooooooooooong-title",
                  "route": "/docs/advanced/more/loooooooooooooooooooong-title",
                },
                {
                  "data": {
                    "loooooooooooooooooooong-title": "Loooooooooooooooooooong Title",
                    "tree": "Tree",
                  },
                  "kind": "Meta",
                  "locale": "en-US",
                },
              ],
              "kind": "Folder",
              "name": "more",
              "route": "/docs/advanced/more",
            },
            {
              "kind": "MdxPage",
              "locale": "zh-CN",
              "name": "performance",
              "route": "/docs/advanced/performance",
            },
            {
              "kind": "MdxPage",
              "locale": "zh-CN",
              "name": "react-native",
              "route": "/docs/advanced/react-native",
            },
            {
              "kind": "MdxPage",
              "locale": "en-US",
              "name": "code-highlighting",
              "route": "/docs/advanced/code-highlighting",
            },
            {
              "kind": "MdxPage",
              "locale": "en-US",
              "name": "future-image",
              "route": "/docs/advanced/future-image",
            },
            {
              "kind": "MdxPage",
              "locale": "en-US",
              "name": "markdown-import",
              "route": "/docs/advanced/markdown-import",
            },
          ],
          "kind": "Folder",
          "name": "advanced",
          "route": "/docs/advanced",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "arguments",
          "route": "/docs/arguments",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "change-log",
          "route": "/docs/change-log",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "conditional-fetching",
          "route": "/docs/conditional-fetching",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "data-fetching",
          "route": "/docs/data-fetching",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "error-handling",
          "route": "/docs/error-handling",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "getting-started",
          "route": "/docs/getting-started",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "global-configuration",
          "route": "/docs/global-configuration",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "middleware",
          "route": "/docs/middleware",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "mutation",
          "route": "/docs/mutation",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "options",
          "route": "/docs/options",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "pagination",
          "route": "/docs/pagination",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "prefetching",
          "route": "/docs/prefetching",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "revalidation",
          "route": "/docs/revalidation",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "suspense",
          "route": "/docs/suspense",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "with-nextjs",
          "route": "/docs/with-nextjs",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "wrap-toc-items",
          "route": "/docs/wrap-toc-items",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "404-500",
          "route": "/docs/404-500",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "advanced",
          "route": "/docs/advanced",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "callout",
          "route": "/docs/callout",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "code-block-without-language",
          "route": "/docs/code-block-without-language",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "raw-layout",
          "route": "/docs/raw-layout",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "typescript",
          "route": "/docs/typescript",
        },
      ],
      "kind": "Folder",
      "name": "docs",
      "route": "/docs",
    },
    {
      "children": [
        {
          "data": {
            "auth": "身份验证",
            "basic": "基本用法",
            "error-handling": "错误处理",
            "infinite-loading": "无限加载",
            "ssr": "Next.js SSR",
          },
          "kind": "Meta",
          "locale": "zh-CN",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "身份验证",
          },
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "auth",
          "route": "/examples/auth",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "基本用法",
          },
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "basic",
          "route": "/examples/basic",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "错误处理",
          },
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "error-handling",
          "route": "/examples/error-handling",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "无限加载",
          },
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "infinite-loading",
          "route": "/examples/infinite-loading",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "full",
          "route": "/examples/full",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "Next.js SSR",
          },
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "ssr",
          "route": "/examples/ssr",
        },
      ],
      "kind": "Folder",
      "name": "examples",
      "route": "/examples",
    },
    {
      "frontMatter": {
        "title": "用于数据请求的 React Hooks 库",
      },
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "index",
      "route": "/",
    },
    {
      "kind": "MdxPage",
      "name": "404",
      "route": "/404",
    },
    {
      "kind": "MdxPage",
      "name": "500",
      "route": "/500",
    },
    {
      "frontMatter": {
        "searchable": false,
      },
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "blog",
      "route": "/blog",
    },
  ],
  "/docs/data-fetching",
  "数据请求",
]
`;
